# MCSM

./: .gitignore  LICENSE  MCSM.sln  README.md  ROADMAP.md  TODO.md  package-lock.json  package.json  pubspec.yaml
MCSM.Core/Models/: LogEntry.cs  PluginInfo.cs  ServerConfig.cs  ServerInfo.cs  ServerStatus.cs
MCSM.Core/Services/: ConfigManager.cs  PathManager.cs  ServerListManager.cs  ServerManager.cs  UpdateManager.cs
MCSM.Core/Utils/: FileHelper.cs  Logger.cs  MinecraftVersionComparer.cs
MCSM.Desktop/: MCSM.Desktop.csproj  Porgram.cs
MCSM.Desktop/Controls/: ConsoleControl.cs  ServerListControl.cs  ServerStatusControl.cs
MCSM.Desktop/Forms/: AddServerForm.cs  LoadingForm.cs  MainForm.Designer.cs  MainForm.cs  ServerConfigForm.cs  SettingsForm.cs
MCSM.Desktop/Utils/: IconManager.cs
lib/: main.dart
lib/models/: app_settings.dart  backup_config.dart  config_model.dart  java_installation.dart  minecraft_server.dart  server_types.dart  settings_model.dart  validation.dart
lib/screens/: console_screen.dart  downloads_screen.dart  home_screen.dart  server_detail_screen.dart  server_screen.dart  settings_screen.dart
lib/services/: backup_service.dart  java_service.dart  minecraft_service.dart  server_process_service.dart  (+1 more)
linux/: CMakeLists.txt
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: advanced.rs  config.rs  console.rs  lib.rs  main.rs  monitoring.rs  players.rs  plugins.rs  security.rs  server.rs  utils.rs  worlds.rs
src-tauri/src/commands/: java.rs  mod.rs  server.rs
test/: widget_test.dart
(+85 files in other folders)
