[package]
name = "mcsm"
version = "0.1.0"
description = "Minecraft Server Manager"
authors = ["Pyro18"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mcsm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["fs-all", "process-command-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.29"  # For system monitoring
tokio = { version = "1", features = ["full"] }  # Async runtime
reqwest = { version = "0.11", features = ["json"] }  # HTTP client
zip = "0.6"  # For handling server downloads
fs_extra = "1.3"  # For file operations
config = "0.13"  # For configuration management
log = "0.4"  # For logging
env_logger = "0.10"  # For logging
lazy_static = "1.4"  # For static initialization

